# Trim

./: .gitignore  README.md  install.sh  pyproject.toml  trim.py
